--- a/Pages/FavouritesUserPage.xaml
+++ b/Pages/FavouritesUserPage.xaml
@@ -49,7 +49,6 @@
         </Grid>
         <Grid x:Name="ItemsPane" Grid.Row="1">
             <local:AdaptiveGridView x:Name="ItemsGridView"
-                                    ItemsSource="{x:Bind ViewItemSource}"
                                     Background="{ThemeResource SystemControlBackgroundChromeMediumLowBrush}"
                                     SelectionMode="None"
                                     IsItemClickEnabled="True"
@@ -63,7 +62,7 @@
                     </Style>
                 </local:AdaptiveGridView.ItemContainerStyle>
                 <local:AdaptiveGridView.ItemTemplate>
-                    <DataTemplate x:DataType="local:FavouritesUserPage_ViewItem">
+                    <DataTemplate x:DataType="local:FavouritesUserViewItem">
                         <Grid Background="{ThemeResource SystemControlBackgroundAltHighBrush}" Padding="5">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
